removed rachel page flip for heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@ $(document).ready(function(){
                             <%= f.file_field :picture %>
                           </p>
                           <p>
-                            <%= f.submit %>
+                            <%= f.submit 'Upload File', :class => 'btn'  %>
                           </p>
                         <% end %>
                     </li>
