--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
 body {
-  background: url(splash.jpg);
+  background: url(rachel_pageflip.gif);
   font-family: 'Karla', Arial, sans-serif;
   color: #fff;
   font-size: 100%;
