search via rachel'

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,7 +10,11 @@ body {
   -moz-background-size: cover;
   background-size: cover;
 }
-
+.search {
+  // margin: 0 auto;
+  // display: block;
+  margin-right: 35%;
+}
 
 h1, h2, h3, h4, h5, h6 {
   color: white;
