--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,6 +12,6 @@
 
   	<br>
 		<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
-		<%= submit_tag "Search", class: 'btn btn-primary' %>
+		<%= submit_tag "Search", class: 'search btn btn-primary' %>
 
 	<% end %>
