--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,14 +1,15 @@
+<!-- old stuff -->
 <div class='row'>
 	<h3 class='prof_head'>My Lessons</h3>
 		<%  @response.each do |video| %>
-	<div class="card col l8 offset-l3">
+  <div class="card col l6 offset-l4">
 		<iframe class="iframe2" src="//www.youtube.com/embed/<%= video.video_id %>" width='700' height='350'></iframe>
 		<div class="card-content">
       		<span class="card-title activator grey-text text-darken-4"><%= video.title %></span>
       		<%= link_to 'delete', profile_path(video.video_id), :action => 'destroy', class: 'btn btn-danger', method: :delete %>
     	</div>
-  	</div>
+    </div>
+  <% end %>
 </div>
 
-<% end %>
 
