--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,11 +8,13 @@
   		<h3>What would you like to learn today?</h3><br>
 		</div>
 
+    <!-- login button -->
   	<% if @current_user === nil%>
     	<%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %>
   	<% end %>
 
   	<br>
+    <!-- search -->
 		<%= form_tag(lessons_path, :method => "get", :url => "lessons_path", id: "search-form") do %><%= text_field_tag :query %>
 		<%= submit_tag "Search", class: 'search btn btn-primary' %>
 
